<resources>
    <string name="app_name">Saving Time</string>
    <string name="starting_amount">Jumlah uang awal</string>
    <string name="monthly_contributions">Jumlah setoran perbulan</string>
    <string name="duration">Ingin menabung berapa bulan?</string>
    <string name="interest">Besar bunga (persen)</string>
    <string name="round_up">Bulatkan hasilnya?</string>
    <string name="calculate">Hitung</string>
    <string name="save">Simpan</string>
    <string name="tip_amount">Total uang yang akan terkumpul: %s</string>
    <string name="invalid_monthly_contribution">Tabungan bulanan tidak boleh kosong.</string>
    <string name="invalid_duration">Durasi menabung tidak boleh kosong.</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="saving_plan">Saving Plan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="copyright">
        Saving Time adalah aplikasi android untuk membuat rencana menabung atau yang kita sebut Saving Plan. Aplikasi ini dapat mempermudah Anda dalam merencanakan tabungan Anda untuk mendapatkan sesuatu yang Anda inginkan.\n\n
        Aplikasi ini dibuat oleh seorang mahasiswa D3 RPLA di Telkom University bernama: Syekh Maulana Wijaya. Aplikasi ini dirancang untuk pengguna supaya lebih termotivasi dalam menabung.\n\n
        Copyright © 2023 Syekh Maulana Wijaya.\n
        All rights reserved.
    </string>
    <string name="belum_ada_data">Anda tidak memiliki saving plan.\nSimpan hasil hitung pada home page untuk menambahkan saving plan!</string>
    <string name="setor">Setor</string>
    <string name="hapus_saving_plan">Hapus Saving Plan</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="hapus_satu">Hapus Saving Plan ini?</string>
    <string name="share_button">Bagikan Aplikasi</string>
    <string name="share_message">Install aplikasi Saving Time kuy!!\nDengan aplikasi ini, masalah keuangan Anda dapat diatasi, karena aplikasi ini didesain untuk mempermudah Anda dalam menabung.\nDapatkan segera aplikasinya pada link berikut: https://github.com/Alan1331/saving-time.git</string>
    <string name="switch_layout">Ubah tampilan</string>
    <string name="koneksi_error">Koneksi error</string>
    <string name="berita_ekonomi">Berita Ekonomi</string>
    <string name="label_fragment_berita_ekonomi">Berita Ekonomi</string>
    <string name="label_fragment_about">Tentang Saving Time</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data berita otomatis</string>
    <string name="notif_title">Ada berita baru nih!</string>
    <string name="notif_text">Cek sekarang biar nggak penasaran..</string>
</resources>